--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<li><a href="#main-section-2">Hakkımda</a></li>
 					<li>
 						<a class="cv-link" href="alpbayramCV.pdf" download
-							>CV'mi İndir <small>(Son Güncelleme: Mart 2025)</small></a
+							>CV'mi İndir <small>(Son Güncelleme: Nisan 2025)</small></a
 						>
 					</li>
 					<li><a href="#main-section-3">İletişim</a></li>
@@ -71,6 +71,111 @@
 		</header>
 		<!-- MAIN -->
 		<main>
+			<section class="main-section-1 main-section projects-section">
+				<div class="whatido"><strong>Projelerim</strong></div>
+				<div class="boxes">
+					<div class="box-1 box">
+						<span class="box-header">Tic Tac Toe</span>
+						<div class="image-1 box-image">
+							<img class="projects" src="./images/project1.avif" alt="Öğrenme" />
+						</div>
+						<div class="links">
+							<a href="https://github.com/alpbayram/tic-tac-toe"
+								><img class="link-icon" src="./images/github-mark.svg" alt=""
+							/></a>
+							<a href="https://alpbayram.github.io/tic-tac-toe/"
+								><img class="link-icon" src="./images/external-link.svg" alt=""
+							/></a>
+						</div>
+						<p class="box-content">
+							HTML, CSS ve JavaScript kullanarak oluşturduğum bu basit Tic Tac Toe
+							oyunu, oyuncuların isim ve simge seçimi yapıp interaktif tahtada hamle
+							yaptığı, satır, sütun ve çapraz kontrollerle kazananı belirlediği sade
+							bir uygulamadır.
+						</p>
+					</div>
+					<div class="box-2 box">
+						<span class="box-header">Admin Dashboard</span>
+
+						<div class="image-2 box-image">
+							<img class="projects" src="./images/project2.avif" alt="" />
+						</div>
+						<div class="links">
+							<a href="https://github.com/alpbayram/admin-dashboard"
+								><img class="link-icon" src="./images/github-mark.svg" alt=""
+							/></a>
+							<a href="https://alpbayram.github.io/admin-dashboard/"
+								><img class="link-icon" src="./images/external-link.svg" alt=""
+							/></a>
+						</div>
+						<span class="box-content"
+							>Temel web teknolojileriyle hazırladığım bu admin dashboard, grid,
+							flexbox ve CSS design tokens kullanılarak duyarlı ve sade bir arayüzde
+							kullanıcı verilerini, projelerini ve duyuruları sunuyor.
+						</span>
+					</div>
+					<div class="box-3 box">
+						<span class="box-header">Calculator</span>
+						<div class="image-3 box-image">
+							<img class="projects" src="./images/project3.avif" alt="" />
+						</div>
+						<div class="links">
+							<a href="https://github.com/alpbayram/odin-calculator"
+								><img class="link-icon" src="./images/github-mark.svg" alt=""
+							/></a>
+							<a href="https://alpbayram.github.io/odin-calculator/"
+								><img class="link-icon" src="./images/external-link.svg" alt=""
+							/></a>
+						</div>
+						<span class="box-content">
+							Matematiksel işlemleri gerçekleştiren, sade bir hesap makinesi
+							uygulaması. Projede JavaScript, HTML ve CSS kullanarak, klavye desteği
+							ile hata yönetimini entegre edip, kullanıcı dostu ve duyarlı bir arayüz
+							oluşturuldu.
+						</span>
+					</div>
+					<div class="box-4 box">
+						<p class="box-header">SignUp Projesi</p>
+						<div class="image-4 box-image">
+							<img class="projects" src="./images/project4.avif" alt="" />
+						</div>
+						<div class="links">
+							<a href="https://github.com/alpbayram/sign-up"
+								><img class="link-icon" src="./images/github-mark.svg" alt=""
+							/></a>
+							<a href="https://alpbayram.github.io/sign-up/"
+								><img class="link-icon" src="./images/external-link.svg" alt=""
+							/></a>
+						</div>
+						<span class="box-content"
+							>Bu kayıt formu projesinde, pseudo class'lar (örneğin, :hover, :focus,
+							:valid, :invalid) ile dinamik görsel tepkiler sağlanırken, aynı zamanda
+							client side validation mekanizmalarıyla kullanıcı girdileri anında
+							kontrol ediliyor.
+						</span>
+					</div>
+					<div class="box-5 box">
+						<p class="box-header">Rock Paper Scissors</p>
+						<div class="image-4 box-image">
+							<img class="projects" src="./images/project5.avif" alt="" />
+						</div>
+						<div class="links">
+							<a href="https://github.com/alpbayram/odin-rock-paper-scissors"
+								><img class="link-icon" src="./images/github-mark.svg" alt=""
+							/></a>
+							<a href="https://alpbayram.github.io/odin-rock-paper-scissors/"
+								><img class="link-icon" src="./images/external-link.svg" alt=""
+							/></a>
+						</div>
+						<span class="box-content"
+							>Bu proje, klasik Taş Kağıt Makas oyununun basit ve etkileşimli bir
+							versiyonudur. Oyuncu ve bilgisayar seçimleriyle her tur sonuçlanır,
+							skorlar anlık güncellenir ve oyun akışı görsel olarak takip edilebilir.
+						</span>
+					</div>
+				</div>
+			</section>
+
 			<section class="main-section-1 main-section">
 				<div class="whatido"><strong>Yetenek Kartlarım</strong></div>
 				<div class="boxes">
@@ -80,9 +185,7 @@
 							<img src="./images/sezi-tasarım/card1.png" alt="Öğrenme" />
 						</div>
 						<p class="box-content">
-							React.js ile component mimarisi üzerine çalışıyorum. Backend'de Node.js
-							ve Express.js kombinasyonunu öğreniyorum. Nest.js'e geçiş için temel
-							atıyorum
+							React.js ile component temelli mimariler üzerine çalışıyorum. Backend tarafında ise Node.js ve Express.js kullanarak temel sunucu yapıları geliştiriyorum. İlerleyen süreçte Nest.js'e geçiş yapmayı hedefliyorum.
 						</p>
 					</div>
 					<div class="box-2 box">
@@ -92,9 +195,7 @@
 							<img src="./images/sezi-tasarım/card2.png" alt="" />
 						</div>
 						<span class="box-content"
-							>Arma Group'da Vue.js ile arayüz geliştirme temelleri edindim.
-							Yigisoft'ta temiz kod prensiplerini uygulama fırsatı buldum. Jira ile
-							Agile metodolojisi deneyimi kazandım
+							>Arma Group’ta Vue.js ile arayüz geliştirme konusunda ilk pratik deneyimimi edindim. Yigisoft’ta ise temiz kod prensiplerini gerçek projelerde uygulama ve Jira ile Agile süreçlerine dahil olma fırsatım oldu.
 						</span>
 					</div>
 					<div class="box-3 box">
@@ -103,9 +204,7 @@
 							<img src="./images/sezi-tasarım/card3.png" alt="" />
 						</div>
 						<span class="box-content">
-							TypeScript'te 2 Full-stack proje tamamladıktan sonra JAMstack ve static
-							site generator'ları (Next.js, Astro) keşfetmek, Backend'de serverless
-							mimarilere giriş yapmak
+							Next.js ile üretim odaklı projeler geliştirmeye odaklanıyorum. Ek olarak, GraphQL, modern state yönetimi, kimlik doğrulama sistemleri ve dağıtım süreçleri (Vercel, Docker) gibi konulara ilgi duyuyorum.
 						</span>
 					</div>
 					<div class="box-4 box">
@@ -114,13 +213,11 @@
 							<img src="./images/sezi-tasarım/card4.PNG" alt="" />
 						</div>
 						<span class="box-content"
-							>Yapıcı geri bildirim almaya açığım,Pair programming ile öğrenmeyi
-							seviyorum, "Bilmiyorum ama öğrenirim" diyebiliyorum
+							>Gerçek projelerde ekip deneyimim sınırlı olsa da, birlikte çalışmaya ve farklı bakış açılarını dinlemeye açık biriyim. Kod paylaşımı, geri bildirim ve ortak çözüm üretme konularında gelişmeye istekliyim.
 						</span>
 					</div>
 				</div>
 			</section>
-
 			<section id="main-section-2" class="main-section-2 main-section">
 				<div class="about-container">
 					<div class="about-header about">
@@ -135,9 +232,7 @@
 								class="float-left"
 							/>
 							<p class="hakkimda-paragraf">
-								2025'te <strong>Kocaeli Üniversitesi</strong> Bilişim Sistemleri
-								Mühendisliği'nden mezun oldum. Derslerde edindiğim teorik bilgileri,
-								stajlarımda pratiğe dökme fırsatı buldum.
+								2025’te Kocaeli Üniversitesi Bilişim Sistemleri Mühendisliği bölümünden mezun oldum. Üniversitede edindiğim teorik temeli, bireysel projelerle ve yoğun bir öğrenme süreciyle pekiştiriyorum.
 							</p>
 						</div>
 						<div>
@@ -147,9 +242,7 @@
 								class="float-left"
 							/>
 							<p class="hakkimda-paragraf">
-								<strong>Arma Group</strong>'daki stajımda: Vue.js ile responsive
-								tasarım öğrendim. Git versiyon kontrolünü proje bazında
-								deneyimledim.
+								Şu anda, The Odin Project üzerinden Full-Stack JavaScript yolunu takip ediyorum. Bu self-paced bootcamp sürecinde, temel frontend bilgilerimi ileriye taşıyor ve backend tarafında Node.js, Express, PostgreSQL gibi teknolojilere yoğunlaşıyorum. Hedefim, bu programı 6–9 ay içinde disiplinli bir çalışmayla tamamlamak ve öğrendiklerimi güçlü projelerle somutlaştırmak.
 							</p>
 						</div>
 						<div>
@@ -159,8 +252,7 @@
 								class="float-left"
 							/>
 							<p class="hakkimda-paragraf">
-								<strong>İngilizce</strong> seviyem: Teknik dokümanları okuyup
-								anlayabiliyor, temel iletişim kurabiliyorum.
+								İngilizce seviyem, teknik dökümanları anlayacak düzeyde; yazılı kaynaklarla rahat çalışabiliyor, temel iletişimi sürdürebiliyorum.
 							</p>
 						</div>
 						<div>
@@ -170,9 +262,7 @@
 								class="float-left"
 							/>
 							<p class="hakkimda-paragraf">
-								<strong>Önümüzdeki 1 Yıl Hedeflerim:</strong>
-								2-3 tam stack proje geliştirmek Açık kaynak projelere küçük katkılar
-								yapmak İngilizce teknik sunumları anlayabilecek seviyeye gelmek
+								Kısa vadede hedefim; 2-3 full-stack proje geliştirerek pratiğimi artırmak, açık kaynak projelere katkıda bulunmak ve bu süreçte gelişimimi destekleyecek bir mentordan rehberlik almak.
 							</p>
 						</div>
 					</div>
