--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<li><a href="#main-section-2">Hakkımda</a></li>
 					<li>
 						<a class="cv-link" href="alpbayramCV.pdf" download
-							>CV'mi İndir <small>(Son Güncelleme: Mayıs 2025)</small></a
+							>CV'mi İndir <small>(Son Güncelleme: Temmuz 2025)</small></a
 						>
 					</li>
 					<li><a href="#main-section-3">İletişim</a></li>
@@ -59,9 +59,9 @@
 				<div class="header-hero-content">
 					<h1>Alp Eren Bayram</h1>
 					<p>
-						Web geliştirme yolculuğuma <strong>The Odin Project</strong> ile başladım.
-						Şimdi öğrendiklerimi projelere döküp, adım adım daha karmaşık sistemlere
-						ilerliyorum.
+						IT destek alanında deneyim kazandım. Şu anda Power BI ve veri okuryazarlığı
+						üzerine çalışıyorum. Hedefim, teknik desteği veriyle birleştiren bir kariyer
+						inşa etmek.
 					</p>
 					<a href="#main-section-3" class="header-hero-content-button">Mail Yolla</a>
 				</div>
@@ -76,7 +76,7 @@
 				<div class="whatido"><strong>Projelerim</strong></div>
 				<div class="boxes">
 					<div class="box-8 box">
-						<p class="box-header">ToDo List</p>
+						<p class="box-header">Microsoft To Do Clone</p>
 						<div class="image-4 box-image">
 							<img class="projects" src="./images/project8.avif" alt="" />
 						</div>
@@ -89,9 +89,24 @@
 							/></a>
 						</div>
 						<span class="box-content"
-							>Bu proje, kullanıcıların görev ekleyip silebildiği, tamamlanan
-							görevleri işaretleyebildiği dinamik bir yapılacak listesi uygulamasıdır.
-							Görevler yerel depolamada saklanır ve sayfa yenilendiğinde korunur.
+							>Bu uygulama, görev takibini kolaylaştırmak amacıyla geliştirilmiştir. Görev ekleme, silme, tamamlama gibi işlemleri destekler; görevler yerel depolamada saklanır. Microsoft To Do benzeri bir yapıdadır ve departman içi iş takibi senaryolarına uygundur.
+						</span>
+					</div>
+					<div class="box-6 box">
+						<p class="box-header">Training & Certification Library</p>
+						<div class="image-4 box-image">
+							<img class="projects" src="./images/project6.avif" alt="" />
+						</div>
+						<div class="links">
+							<a href="https://github.com/alpbayram/library"
+								><img class="link-icon" src="./images/github-mark.svg" alt=""
+							/></a>
+							<a href="https://alpbayram.github.io/library/"
+								><img class="link-icon" src="./images/external-link.svg" alt=""
+							/></a>
+						</div>
+						<span class="box-content">
+							Teknik kitaplar, sertifikalar ve eğitim materyalleri için kullanıcı dostu bir arayüz sunar. Başlık, yazar, sayfa sayısı gibi bilgiler görsel kart yapısında listelenir. İçerikler “okundu” olarak işaretlenebilir ve yönetilebilir. Eğitim takibi ve kişisel gelişim arşivleri için uygundur.
 						</span>
 					</div>
 					<div class="box-7 box">
@@ -112,45 +127,8 @@
 							bölümü, iletişim formu ve görsel galeri içerir.
 						</span>
 					</div>
-					<div class="box-6 box">
-						<p class="box-header">Library</p>
-						<div class="image-4 box-image">
-							<img class="projects" src="./images/project6.avif" alt="" />
-						</div>
-						<div class="links">
-							<a href="https://github.com/alpbayram/library"
-								><img class="link-icon" src="./images/github-mark.svg" alt=""
-							/></a>
-							<a href="https://alpbayram.github.io/library/"
-								><img class="link-icon" src="./images/external-link.svg" alt=""
-							/></a>
-						</div>
-						<span class="box-content">
-							Bu proje, kullanıcıların kitap ekleyip düzenleyebildiği ve okundu
-							bilgisini işaretleyebildiği basit bir kütüphane uygulamasıdır. Kitap
-							verileri yerel depolamada tutulur.
-						</span>
-					</div>
-					<div class="box-1 box">
-						<span class="box-header">Tic Tac Toe</span>
-						<div class="image-1 box-image">
-							<img class="projects" src="./images/project1.avif" alt="Öğrenme" />
-						</div>
-						<div class="links">
-							<a href="https://github.com/alpbayram/tic-tac-toe"
-								><img class="link-icon" src="./images/github-mark.svg" alt=""
-							/></a>
-							<a href="https://alpbayram.github.io/tic-tac-toe/"
-								><img class="link-icon" src="./images/external-link.svg" alt=""
-							/></a>
-						</div>
-						<p class="box-content">
-							HTML, CSS ve JavaScript kullanarak oluşturduğum bu basit Tic Tac Toe
-							oyunu, oyuncuların isim ve simge seçimi yapıp interaktif tahtada hamle
-							yaptığı, satır, sütun ve çapraz kontrollerle kazananı belirlediği sade
-							bir uygulamadır.
-						</p>
-					</div>
+
+					
 					<div class="box-2 box">
 						<span class="box-header">Admin Dashboard</span>
 
@@ -191,7 +169,7 @@
 							oluşturuldu.
 						</span>
 					</div>
-					<div class="box-4 box">
+					<!-- <div class="box-4 box">
 						<p class="box-header">SignUp Projesi</p>
 						<div class="image-4 box-image">
 							<img class="projects" src="./images/project4.avif" alt="" />
@@ -210,25 +188,26 @@
 							client side validation mekanizmalarıyla kullanıcı girdileri anında
 							kontrol ediliyor.
 						</span>
-					</div>
-					<div class="box-5 box">
-						<p class="box-header">Rock Paper Scissors</p>
-						<div class="image-4 box-image">
-							<img class="projects" src="./images/project5.avif" alt="" />
+					</div> -->
+					<div class="box-1 box">
+						<span class="box-header">Tic Tac Toe</span>
+						<div class="image-1 box-image">
+							<img class="projects" src="./images/project1.avif" alt="Öğrenme" />
 						</div>
 						<div class="links">
-							<a href="https://github.com/alpbayram/odin-rock-paper-scissors"
+							<a href="https://github.com/alpbayram/tic-tac-toe"
 								><img class="link-icon" src="./images/github-mark.svg" alt=""
 							/></a>
-							<a href="https://alpbayram.github.io/odin-rock-paper-scissors/"
+							<a href="https://alpbayram.github.io/tic-tac-toe/"
 								><img class="link-icon" src="./images/external-link.svg" alt=""
 							/></a>
 						</div>
-						<span class="box-content"
-							>Bu proje, klasik Taş Kağıt Makas oyununun basit ve etkileşimli bir
-							versiyonudur. Oyuncu ve bilgisayar seçimleriyle her tur sonuçlanır,
-							skorlar anlık güncellenir ve oyun akışı görsel olarak takip edilebilir.
-						</span>
+						<p class="box-content">
+							HTML, CSS ve JavaScript kullanarak oluşturduğum bu basit Tic Tac Toe
+							oyunu, oyuncuların isim ve simge seçimi yapıp interaktif tahtada hamle
+							yaptığı, satır, sütun ve çapraz kontrollerle kazananı belirlediği sade
+							bir uygulamadır.
+						</p>
 					</div>
 				</div>
 			</section>
@@ -237,14 +216,12 @@
 				<div class="whatido"><strong>Yetenek Kartlarım</strong></div>
 				<div class="boxes">
 					<div class="box-1 box">
-						<span class="box-header">Şu Anda Odaklandıklarım</span>
+						<span class="box-header">Odaklandıklarım</span>
 						<div class="image-1 box-image">
 							<img src="./images/sezi-tasarım/card1.png" alt="Öğrenme" />
 						</div>
 						<p class="box-content">
-							React.js ile component temelli mimariler üzerine çalışıyorum. Backend
-							tarafında ise Node.js ve Express.js kullanarak temel sunucu yapıları
-							geliştiriyorum. İlerleyen süreçte Nest.js'e geçiş yapmayı hedefliyorum.
+							Windows, macOS ve Linux sistemlerinde kurulum, imaging ve kullanıcı desteği konularında pratiğim var. Power BI ile veri görselleştirme öğreniyorum.
 						</p>
 					</div>
 					<div class="box-2 box">
@@ -254,10 +231,7 @@
 							<img src="./images/sezi-tasarım/card2.png" alt="" />
 						</div>
 						<span class="box-content"
-							>Arma Group’ta Vue.js ile arayüz geliştirme konusunda ilk pratik
-							deneyimimi edindim. Yigisoft’ta ise temiz kod prensiplerini gerçek
-							projelerde uygulama ve Jira ile Agile süreçlerine dahil olma fırsatım
-							oldu.
+							>Service Desk sistemleriyle çalıştım, kullanıcı sorunlarını çözdüm, envanter ve kurulum süreçlerinde yer aldım. Jira ve Microsoft 365 gibi araçlarda deneyimim var.
 						</span>
 					</div>
 					<div class="box-3 box">
@@ -266,9 +240,7 @@
 							<img src="./images/sezi-tasarım/card3.png" alt="" />
 						</div>
 						<span class="box-content">
-							Next.js ile üretim odaklı projeler geliştirmeye odaklanıyorum. Ek
-							olarak, GraphQL, modern state yönetimi, kimlik doğrulama sistemleri ve
-							dağıtım süreçleri (Vercel, Docker) gibi konulara ilgi duyuyorum.
+							Power BI ile raporlama yapmayı ve Microsoft Data Fundamentals konularını öğreniyorum. Veri analizi ve iş zekasına yönelmeyi planlıyorum.
 						</span>
 					</div>
 					<div class="box-4 box">
@@ -277,9 +249,7 @@
 							<img src="./images/sezi-tasarım/card4.PNG" alt="" />
 						</div>
 						<span class="box-content"
-							>Gerçek projelerde ekip deneyimim sınırlı olsa da, birlikte çalışmaya ve
-							farklı bakış açılarını dinlemeye açık biriyim. Kod paylaşımı, geri
-							bildirim ve ortak çözüm üretme konularında gelişmeye istekliyim.
+							>Destek taleplerini ekip içinde hızlıca çözüme ulaştırmayı öğrendim. Açık iletişim ve birlikte çözüm üretme konularında her zaman istekliyim.
 						</span>
 					</div>
 				</div>
@@ -298,9 +268,7 @@
 								class="float-left"
 							/>
 							<p class="hakkimda-paragraf">
-								2025’te Kocaeli Üniversitesi Bilişim Sistemleri Mühendisliği
-								bölümünden mezun oldum. Üniversitede edindiğim teorik temeli,
-								bireysel projelerle ve yoğun bir öğrenme süreciyle pekiştiriyorum.
+								2025’te Kocaeli Üniversitesi Bilişim Sistemleri Mühendisliği bölümünden mezun oldum. Üniversitede işletim sistemleri, ağ temelleri ve sistem analizi üzerine yoğunlaştım. Bu temeli stajlarım ve bireysel çalışmalarla pratikte geliştirdim.
 							</p>
 						</div>
 						<div>
@@ -310,12 +278,7 @@
 								class="float-left"
 							/>
 							<p class="hakkimda-paragraf">
-								Şu anda, The Odin Project üzerinden Full-Stack JavaScript yolunu
-								takip ediyorum. Bu self-paced bootcamp sürecinde, temel frontend
-								bilgilerimi ileriye taşıyor ve backend tarafında Node.js, Express,
-								PostgreSQL gibi teknolojilere yoğunlaşıyorum. Hedefim, bu programı
-								6–9 ay içinde disiplinli bir çalışmayla tamamlamak ve öğrendiklerimi
-								güçlü projelerle somutlaştırmak.
+								Teknik destek süreçlerine odaklanıyorum. Windows, macOS ve Linux sistemlerinde kurulum, imaging ve sorun giderme üzerine pratik kazandım. Şu anda Power BI ve Microsoft Data Fundamentals ile veri okuryazarlığı üzerinde çalışıyorum.
 							</p>
 						</div>
 						<div>
@@ -325,8 +288,7 @@
 								class="float-left"
 							/>
 							<p class="hakkimda-paragraf">
-								İngilizce seviyem, teknik dökümanları anlayacak düzeyde; yazılı
-								kaynaklarla rahat çalışabiliyor, temel iletişimi sürdürebiliyorum.
+								İngilizce kaynaklarla rahat çalışıyorum. Teknik dökümanları anlayabiliyor, temel seviyede yazılı ve sözlü iletişim kurabiliyorum.
 							</p>
 						</div>
 						<div>
@@ -336,9 +298,7 @@
 								class="float-left"
 							/>
 							<p class="hakkimda-paragraf">
-								Kısa vadede hedefim; 2-3 full-stack proje geliştirerek pratiğimi
-								artırmak, açık kaynak projelere katkıda bulunmak ve bu süreçte
-								gelişimimi destekleyecek bir mentordan rehberlik almak.
+								Kısa vadede hedefim; IT destek alanında çalışarak tecrübe kazanmak ve bu süreçte Power BI odaklı projeler geliştirerek veri tarafına yönelmek. Destek ve veri okuryazarlığını bir araya getiren bir kariyer inşa etmek istiyorum.
 							</p>
 						</div>
 					</div>
